*For best results, view this document using a Markdown reader.*


# Release 1.0 (Not yet released)

## Release Notes

This release contains changes that will break apps built against earlier Core Plot versions. `CPTPlotRange` has been split into mutable and immutable variants similar to `CPTLineStyle` and `CPTTextStyle`. This change will break existing code that changes plot ranges; that code should be updated to use the mutable versions. The `CPTNewCGColorFromNSColor()` function was renamed to `CPTCreateCGColorFromNSColor()` to conform to Apple's memory management naming conventions.

Core Plot now supports projects that use automatic reference counting (ARC). For compatibility with older systems, Core Plot itself does not use ARC but its header files and binaries can be used in applications that do.

## Details
- **New**: Added a script to automatically format the code following the coding standards using uncrustify.
- **New**: Added support for automatic reference counting (ARC).
- **New**: Added the HTML docs built with Doxygen to the source code repository so that they can be viewed online with a web browser.
- **New**: Added an `identifier` property to `CPTLayer`, replacing the one from `CPTPlot` and `CPTPlotGroup`.
- **New**: Added a control chart example to the Plot Gallery app.
- **New**: Added a mouse zoom user interface to the DropPlot app.
- **Changed**: Split `CPTPlotRange` into mutable and immutable variants.
- **Changed**: Renamed the `CPTNewCGColorFromNSColor()` function to `CPTCreateCGColorFromNSColor()`.
- **Changed**: Updated all projects to support Xcode 4.2.
- **Changed**: Made all `CPTAxis` delegate methods optional.
- **Changed**: Added the `-[CPTAxis axis:shouldUpdateMinorAxisLabelsAtLocations:]` delegate method.
- **Changed**: Added a graph fill to the Slate theme so that all themes have explicit fills.
- **Changed**: Miscellaneous bug fixes and cleanup.
- **Removed**: Removed unused `NSException` extensions.